gitops/manifests/Archive/zincsearch/install.yaml
apiVersion: v1
kind: Service
metadata:
  name: zinc
  namespace: logging
  annotations:
    metallb.universe.tf/allow-shared-ip: "192.168.86.220"
spec:
  selector:
    app: zinc
  type: LoadBalancer
  ports:
  - name: http
    port: 4080
    targetPort: 4080

---

# create statefulset
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zinc
  namespace: logging
  annotations:
    avp.kubernetes.io/path: "secret/data/zincSearch"
  labels:
    name: zinc
spec:
  serviceName: z
  replicas: 1
  selector:
    matchLabels:
      name: zinc
      app: zinc
  template:
    metadata:
      labels:
        name: zinc
        app: zinc
    spec:
      securityContext:
        fsGroup: 2000
        runAsUser: 10000
        runAsGroup: 3000
        runAsNonRoot: true
      # terminationGracePeriodSeconds: 0
      containers:
        - name: zinc
          image: public.ecr.aws/zinclabs/zinc:0.4.2
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 1024m
              memory: 1024Mi
            requests:
              cpu: 250m
              memory: 500Mi
          ports:
            - containerPort: 4080
              name: http
          volumeMounts:
          - name: data
            mountPath: /go/bin/data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: nfs-csi-synologynas
      # volumeName: pvc-29d58e8d-f330-4e3b-83d1-86b26f1e56ab
      # NOTE: You can increase the storage size
      resources:
        requests:
          storage: 96Gi

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zinc-ingress
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`zinc.local.timmybtech.com`) # create A record in pihole
      kind: Rule
      services:
        - name: zinc
          port: 4080
  tls:
    secretName: local-timmybtech-com-tls # or local-timmybtech-com-staging-tls
